# docs/swagger.yaml
@@ -124,7 +124,7 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
-  /api/auth/v1/confirm:
+  /api/v1/auth/confirm:
     post:
       consumes:
       - application/json
@@ -150,7 +150,7 @@ paths:
       summary: Confirm phone number
       tags:
       - auth
-  /api/auth/v1/google:
+  /api/v1/auth/google:
     post:
       consumes:
       - application/json
@@ -176,7 +176,7 @@ paths:
       summary: Google authentication
       tags:
       - auth
-  /api/auth/v1/login:
+  /api/v1/auth/login:
     post:
       consumes:
       - application/json
@@ -202,7 +202,7 @@ paths:
       summary: Login user
       tags:
       - auth
-  /api/auth/v1/me:
+  /api/v1/auth/me:
     get:
       consumes:
       - application/json
@@ -221,7 +221,7 @@ paths:
       summary: Get user profile
       tags:
       - auth
-  /api/auth/v1/refresh:
+  /api/v1/auth/refresh:
     post:
       consumes:
       - application/json
@@ -247,7 +247,7 @@ paths:
       summary: Refresh token
       tags:
       - auth
-  /api/auth/v1/register:
+  /api/v1/auth/register:
     post:
       consumes:
       - application/json
